--- a/2.5D作品/Project.vcxproj
+++ b/2.5D作品/Project.vcxproj
@@ -145,6 +145,15 @@
     <ClInclude Include="..\Library\tinygltf\stb_image_write.h" />
     <ClInclude Include="..\Library\tinygltf\tiny_gltf.h" />
     <ClInclude Include="Src\Application\main.h" />
+    <ClInclude Include="Src\Application\Object\Camera\CameraBase.h" />
+    <ClInclude Include="Src\Application\Object\Camera\FPS\FPS.h" />
+    <ClInclude Include="Src\Application\Object\Camera\TPS\TPS.h" />
+    <ClInclude Include="Src\Application\Object\Camera\Tracking\Tracking.h" />
+    <ClInclude Include="Src\Application\Object\Character\Enemy\Enemy.h" />
+    <ClInclude Include="Src\Application\Object\Character\Player\Player.h" />
+    <ClInclude Include="Src\Application\Scene\GameScene\GameScene.h" />
+    <ClInclude Include="Src\Application\Scene\ResultScene\ResultScene.h" />
+    <ClInclude Include="Src\Application\Scene\TitleScene\TitleScene.h" />
     <ClInclude Include="Src\Framework\Direct3D\KdMaterial.h" />
     <ClInclude Include="Src\Framework\Direct3D\Polygon\KdPolygon.h" />
     <ClInclude Include="Src\Framework\Direct3D\Polygon\KdSquarePolygon.h" />
@@ -182,6 +191,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Application\main.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\CameraBase.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\FPS\FPS.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\TPS\TPS.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\Tracking\Tracking.cpp" />
+    <ClCompile Include="Src\Application\Object\Character\Enemy\Enemy.cpp" />
+    <ClCompile Include="Src\Application\Object\Character\Player\Player.cpp" />
+    <ClCompile Include="Src\Application\Scene\GameScene\GameScene.cpp" />
+    <ClCompile Include="Src\Application\Scene\ResultScene\ResultScene.cpp" />
+    <ClCompile Include="Src\Application\Scene\TitleScene\TitleScene.cpp" />
     <ClCompile Include="Src\Framework\Direct3D\KdMaterial.cpp">
       <SubType>
       </SubType>
