--- a/SumoWrestler/Project.vcxproj
+++ b/SumoWrestler/Project.vcxproj
@@ -145,12 +145,17 @@
     <ClInclude Include="..\Library\tinygltf\stb_image_write.h" />
     <ClInclude Include="..\Library\tinygltf\tiny_gltf.h" />
     <ClInclude Include="Src\Application\main.h" />
-    <ClInclude Include="Src\Application\Object\Camera\CameraBase.h" />
+    <ClInclude Include="Src\Application\Object\Camera\CameraBase\CameraBase.h" />
+    <ClInclude Include="Src\Application\Object\Camera\CameraManager.h" />
     <ClInclude Include="Src\Application\Object\Camera\FPS\FPS.h" />
     <ClInclude Include="Src\Application\Object\Camera\TPS\TPS.h" />
+    <ClInclude Include="Src\Application\Object\Camera\Tracking\Tracking.h" />
     <ClInclude Include="Src\Application\Object\Enemy\Enemy.h" />
     <ClInclude Include="Src\Application\Object\Ground\Ground.h" />
     <ClInclude Include="Src\Application\Object\Player\Player.h" />
+    <ClInclude Include="Src\Application\Object\SceneText\LoseScene\LoseScene.h" />
+    <ClInclude Include="Src\Application\Object\SceneText\TitleScene\TitleText.h" />
+    <ClInclude Include="Src\Application\Object\SceneText\WinScene\WinScene.h" />
     <ClInclude Include="Src\Application\Object\SkySphere\SkySphere.h" />
     <ClInclude Include="Src\Application\Scene\GameScene\GameScene.h" />
     <ClInclude Include="Src\Application\Scene\ResultScene\ResultScene.h" />
@@ -194,12 +199,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Application\main.cpp" />
-    <ClCompile Include="Src\Application\Object\Camera\CameraBase.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\CameraBase\CameraBase.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\CameraManager.cpp" />
     <ClCompile Include="Src\Application\Object\Camera\FPS\FPS.cpp" />
     <ClCompile Include="Src\Application\Object\Camera\TPS\TPS.cpp" />
+    <ClCompile Include="Src\Application\Object\Camera\Tracking\Tracking.cpp" />
     <ClCompile Include="Src\Application\Object\Enemy\Enemy.cpp" />
     <ClCompile Include="Src\Application\Object\Ground\Ground.cpp" />
     <ClCompile Include="Src\Application\Object\Player\Player.cpp" />
+    <ClCompile Include="Src\Application\Object\SceneText\LoseScene\LoseScene.cpp" />
+    <ClCompile Include="Src\Application\Object\SceneText\TitleScene\TitleText.cpp" />
+    <ClCompile Include="Src\Application\Object\SceneText\WinScene\WinScene.cpp" />
     <ClCompile Include="Src\Application\Object\SkySphere\SkySphere.cpp" />
     <ClCompile Include="Src\Application\Scene\GameScene\GameScene.cpp" />
     <ClCompile Include="Src\Application\Scene\ResultScene\ResultScene.cpp" />
