--- a/SumoWrestler/Project.vcxproj.filters
+++ b/SumoWrestler/Project.vcxproj.filters
@@ -97,6 +97,24 @@
     <Filter Include="Src\Application\Object\Camera\FPS">
       <UniqueIdentifier>{ba6befb1-de1e-4505-8e54-d32230ef8bab}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\Application\Object\SceneText">
+      <UniqueIdentifier>{e49f03ef-02a9-4cb5-ab09-a913b90aa673}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Application\Object\SceneText\WinScene">
+      <UniqueIdentifier>{1f45eb00-e602-4acf-8cda-852c25e2b0e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Application\Object\SceneText\LoseScene">
+      <UniqueIdentifier>{2cc5e0a5-a773-43c6-8a5b-490b8d9ed1e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Application\Object\SceneText\TitleScene">
+      <UniqueIdentifier>{9e55000a-655a-46ce-a6df-b400fdc54c27}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Application\Object\Camera\Tracking">
+      <UniqueIdentifier>{d93b2e60-e30e-416b-921c-303928070519}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\Application\Object\Camera\CameraBase">
+      <UniqueIdentifier>{7858bb41-61fb-4b2b-860b-568f989f3a3e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Pch.h">
@@ -246,7 +264,7 @@
     <ClInclude Include="Src\Application\Object\SkySphere\SkySphere.h">
       <Filter>Src\Application\Object\SkySphere</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Application\Object\Camera\CameraBase.h">
+    <ClInclude Include="Src\Application\Object\Camera\CameraManager.h">
       <Filter>Src\Application\Object\Camera</Filter>
     </ClInclude>
     <ClInclude Include="Src\Application\Object\Camera\FPS\FPS.h">
@@ -254,6 +272,21 @@
     </ClInclude>
     <ClInclude Include="Src\Application\Object\Camera\TPS\TPS.h">
       <Filter>Src\Application\Object\Camera\TPS</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Application\Object\SceneText\LoseScene\LoseScene.h">
+      <Filter>Src\Application\Object\SceneText\LoseScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Application\Object\SceneText\TitleScene\TitleText.h">
+      <Filter>Src\Application\Object\SceneText\TitleScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Application\Object\SceneText\WinScene\WinScene.h">
+      <Filter>Src\Application\Object\SceneText\WinScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Application\Object\Camera\Tracking\Tracking.h">
+      <Filter>Src\Application\Object\Camera\Tracking</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Application\Object\Camera\CameraBase\CameraBase.h">
+      <Filter>Src\Application\Object\Camera\CameraBase</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -383,7 +416,7 @@
     <ClCompile Include="Src\Application\Object\SkySphere\SkySphere.cpp">
       <Filter>Src\Application\Object\SkySphere</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Application\Object\Camera\CameraBase.cpp">
+    <ClCompile Include="Src\Application\Object\Camera\CameraManager.cpp">
       <Filter>Src\Application\Object\Camera</Filter>
     </ClCompile>
     <ClCompile Include="Src\Application\Object\Camera\FPS\FPS.cpp">
@@ -391,6 +424,21 @@
     </ClCompile>
     <ClCompile Include="Src\Application\Object\Camera\TPS\TPS.cpp">
       <Filter>Src\Application\Object\Camera\TPS</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\SceneText\LoseScene\LoseScene.cpp">
+      <Filter>Src\Application\Object\SceneText\LoseScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\SceneText\TitleScene\TitleText.cpp">
+      <Filter>Src\Application\Object\SceneText\TitleScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\SceneText\WinScene\WinScene.cpp">
+      <Filter>Src\Application\Object\SceneText\WinScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\Camera\Tracking\Tracking.cpp">
+      <Filter>Src\Application\Object\Camera\Tracking</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\Camera\CameraBase\CameraBase.cpp">
+      <Filter>Src\Application\Object\Camera\CameraBase</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
