--- a/SumoWrestler/Project.vcxproj
+++ b/SumoWrestler/Project.vcxproj
@@ -152,12 +152,13 @@
     <ClInclude Include="Src\Application\Object\Enemy\Enemy.h" />
     <ClInclude Include="Src\Application\Object\Ground\Ground.h" />
     <ClInclude Include="Src\Application\Object\Player\Player.h" />
-    <ClInclude Include="Src\Application\Object\SceneText\LoseScene\LoseScene.h" />
+    <ClInclude Include="Src\Application\Object\SceneText\LoseScene\LoseText.h" />
     <ClInclude Include="Src\Application\Object\SceneText\TitleScene\TitleText.h" />
-    <ClInclude Include="Src\Application\Object\SceneText\WinScene\WinScene.h" />
+    <ClInclude Include="Src\Application\Object\SceneText\WinScene\WinText.h" />
     <ClInclude Include="Src\Application\Object\SkySphere\SkySphere.h" />
     <ClInclude Include="Src\Application\Scene\GameScene\GameScene.h" />
-    <ClInclude Include="Src\Application\Scene\ResultScene\ResultScene.h" />
+    <ClInclude Include="Src\Application\Scene\ResultScene\Lose\LoseScene.h" />
+    <ClInclude Include="Src\Application\Scene\ResultScene\Win\WinScene.h" />
     <ClInclude Include="Src\Application\Scene\SceneBase\SceneBase.h" />
     <ClInclude Include="Src\Application\Scene\SceneManager.h" />
     <ClInclude Include="Src\Application\Scene\TitleScene\TitleScene.h" />
@@ -205,12 +206,13 @@
     <ClCompile Include="Src\Application\Object\Enemy\Enemy.cpp" />
     <ClCompile Include="Src\Application\Object\Ground\Ground.cpp" />
     <ClCompile Include="Src\Application\Object\Player\Player.cpp" />
-    <ClCompile Include="Src\Application\Object\SceneText\LoseScene\LoseScene.cpp" />
+    <ClCompile Include="Src\Application\Object\SceneText\LoseScene\LoseText.cpp" />
     <ClCompile Include="Src\Application\Object\SceneText\TitleScene\TitleText.cpp" />
-    <ClCompile Include="Src\Application\Object\SceneText\WinScene\WinScene.cpp" />
+    <ClCompile Include="Src\Application\Object\SceneText\WinScene\WinText.cpp" />
     <ClCompile Include="Src\Application\Object\SkySphere\SkySphere.cpp" />
     <ClCompile Include="Src\Application\Scene\GameScene\GameScene.cpp" />
-    <ClCompile Include="Src\Application\Scene\ResultScene\ResultScene.cpp" />
+    <ClCompile Include="Src\Application\Scene\ResultScene\Lose\LoseScene.cpp" />
+    <ClCompile Include="Src\Application\Scene\ResultScene\Win\WinScene.cpp" />
     <ClCompile Include="Src\Application\Scene\SceneBase\SceneBase.cpp" />
     <ClCompile Include="Src\Application\Scene\SceneManager.cpp" />
     <ClCompile Include="Src\Application\Scene\TitleScene\TitleScene.cpp" />
