--- a/SumoWrestler/Project.vcxproj
+++ b/SumoWrestler/Project.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Src\Application\Object\Camera\Tracking\Tracking.h" />
     <ClInclude Include="Src\Application\Object\Enemy\Enemy.h" />
     <ClInclude Include="Src\Application\Object\Ground\Ground.h" />
+    <ClInclude Include="Src\Application\Object\ObjBase.h" />
     <ClInclude Include="Src\Application\Object\Player\Player.h" />
     <ClInclude Include="Src\Application\Object\SceneText\LoseScene\LoseText.h" />
     <ClInclude Include="Src\Application\Object\SceneText\TitleScene\TitleText.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="Src\Application\Object\Camera\Tracking\Tracking.cpp" />
     <ClCompile Include="Src\Application\Object\Enemy\Enemy.cpp" />
     <ClCompile Include="Src\Application\Object\Ground\Ground.cpp" />
+    <ClCompile Include="Src\Application\Object\ObjBase.cpp" />
     <ClCompile Include="Src\Application\Object\Player\Player.cpp" />
     <ClCompile Include="Src\Application\Object\SceneText\LoseScene\LoseText.cpp" />
     <ClCompile Include="Src\Application\Object\SceneText\TitleScene\TitleText.cpp" />
