--- a/SumoWrestler/Project.vcxproj.filters
+++ b/SumoWrestler/Project.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="Src\Application\Scene\ResultScene\Win\WinScene.h">
       <Filter>Src\Application\Scene\ResultScene\Win</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Application\Object\ObjBase.h">
+      <Filter>Src\Application\Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Pch.cpp">
@@ -442,6 +445,9 @@
     </ClCompile>
     <ClCompile Include="Src\Application\Scene\ResultScene\Win\WinScene.cpp">
       <Filter>Src\Application\Scene\ResultScene\Win</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Application\Object\ObjBase.cpp">
+      <Filter>Src\Application\Object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
